add battery ags battery widget & power sysd services for nb

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #FF089D;
-$secondary_paletteKeyColor: #9B6A72;
-$tertiary_paletteKeyColor: #A86462;
-$neutral_paletteKeyColor: #857278;
-$neutral_variant_paletteKeyColor: #887178;
-$background: #FFF8F8;
-$onBackground: #25181D;
-$surface: #FFF8F8;
-$surfaceDim: #ECD4DB;
-$surfaceBright: #FFF8F8;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #FFF0F3;
-$surfaceContainer: #FFE8EE;
-$surfaceContainerHigh: #FBE2E9;
-$surfaceContainerHighest: #F5DCE3;
-$onSurface: #25181D;
-$surfaceVariant: #F8DBE4;
-$onSurfaceVariant: #554148;
-$inverseSurface: #3B2C32;
-$inverseOnSurface: #FFECF1;
-$outline: #856F76;
-$outlineVariant: #DBBFC8;
+$primary_paletteKeyColor: #727785;
+$secondary_paletteKeyColor: #747780;
+$tertiary_paletteKeyColor: #6F778B;
+$neutral_paletteKeyColor: #787778;
+$neutral_variant_paletteKeyColor: #787778;
+$background: #131315;
+$onBackground: #E4E2E3;
+$surface: #131315;
+$surfaceDim: #131315;
+$surfaceBright: #39393A;
+$surfaceContainerLowest: #0E0E0F;
+$surfaceContainerLow: #1B1B1D;
+$surfaceContainer: #1F1F21;
+$surfaceContainerHigh: #2A2A2B;
+$surfaceContainerHighest: #353436;
+$onSurface: #E4E2E3;
+$surfaceVariant: #474648;
+$onSurfaceVariant: #C8C6C7;
+$inverseSurface: #E4E2E3;
+$inverseOnSurface: #303032;
+$outline: #929092;
+$outlineVariant: #474648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #B7006F;
-$primary: #B7006F;
-$onPrimary: #FFFFFF;
-$primaryContainer: #FFD9E5;
-$onPrimaryContainer: #3E0022;
-$inversePrimary: #FFB0CE;
-$secondary: #80525A;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #FEC2CB;
-$onSecondaryContainer: #321018;
-$tertiary: #A56260;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #A56260;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #FFD9E5;
-$primaryFixedDim: #FFB0CE;
-$onPrimaryFixed: #3E0022;
-$onPrimaryFixedVariant: #8C0054;
-$secondaryFixed: #FFD9DE;
-$secondaryFixedDim: #F2B7C0;
-$onSecondaryFixed: #321018;
-$onSecondaryFixedVariant: #653B42;
-$tertiaryFixed: #FFDAD8;
-$tertiaryFixedDim: #FFB3B0;
-$onTertiaryFixed: #380B0D;
-$onTertiaryFixedVariant: #6F3634;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #F3E2E6;
-$term1: #B12669;
-$term2: #A97363;
-$term3: #AD536A;
-$term4: #A67F80;
-$term5: #B23E7C;
-$term6: #8D76AD;
-$term7: #262023;
-$term8: #0E0D0D;
-$term9: #B12669;
-$term10: #A97363;
-$term11: #AD536A;
-$term12: #A67F80;
-$term13: #B23E7C;
-$term14: #8D76AD;
-$term15: #350D21;
+$surfaceTint: #C1C6D6;
+$primary: #C1C6D6;
+$onPrimary: #2B303C;
+$primaryContainer: #414753;
+$onPrimaryContainer: #DEE2F2;
+$inversePrimary: #595E6C;
+$secondary: #C4C6D0;
+$onSecondary: #2D3038;
+$secondaryContainer: #44474F;
+$onSecondaryContainer: #E1E2EC;
+$tertiary: #BEC6DC;
+$onTertiary: #283041;
+$tertiaryContainer: #8991A5;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #DEE2F2;
+$primaryFixedDim: #C1C6D6;
+$onPrimaryFixed: #161C27;
+$onPrimaryFixedVariant: #414753;
+$secondaryFixed: #E1E2EC;
+$secondaryFixedDim: #C4C6D0;
+$onSecondaryFixed: #191C22;
+$onSecondaryFixedVariant: #44474F;
+$tertiaryFixed: #DAE2F9;
+$tertiaryFixedDim: #BEC6DC;
+$onTertiaryFixed: #131C2C;
+$onTertiaryFixedVariant: #3F4759;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #1A1A1D;
+$term1: #8B81FF;
+$term2: #64DCF0;
+$term3: #FFDCF3;
+$term4: #8CADD4;
+$term5: #9FA4EF;
+$term6: #96CFFC;
+$term7: #E8D3DE;
+$term8: #C3B5C0;
+$term9: #BFB9FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #C9DEF6;
+$term13: #D7D6FF;
+$term14: #F8FAFF;
+$term15: #E0E3E8;
