--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: True;
+$darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #727785;
-$secondary_paletteKeyColor: #747780;
-$tertiary_paletteKeyColor: #6F778B;
-$neutral_paletteKeyColor: #787778;
-$neutral_variant_paletteKeyColor: #787778;
-$background: #131315;
-$onBackground: #E4E2E3;
-$surface: #131315;
-$surfaceDim: #131315;
-$surfaceBright: #39393A;
-$surfaceContainerLowest: #0E0E0F;
-$surfaceContainerLow: #1B1B1D;
-$surfaceContainer: #1F1F21;
-$surfaceContainerHigh: #2A2A2B;
-$surfaceContainerHighest: #353436;
-$onSurface: #E4E2E3;
-$surfaceVariant: #474648;
-$onSurfaceVariant: #C8C6C7;
-$inverseSurface: #E4E2E3;
-$inverseOnSurface: #303032;
-$outline: #929092;
-$outlineVariant: #474648;
+$primary_paletteKeyColor: #002CFF;
+$secondary_paletteKeyColor: #7A7296;
+$tertiary_paletteKeyColor: #896FA1;
+$neutral_paletteKeyColor: #767682;
+$neutral_variant_paletteKeyColor: #757685;
+$background: #FBF8FF;
+$onBackground: #1A1B25;
+$surface: #FBF8FF;
+$surfaceDim: #DAD8E7;
+$surfaceBright: #FBF8FF;
+$surfaceContainerLowest: #FFFFFF;
+$surfaceContainerLow: #F4F2FF;
+$surfaceContainer: #EEECFB;
+$surfaceContainerHigh: #E8E7F5;
+$surfaceContainerHighest: #E2E1EF;
+$onSurface: #1A1B25;
+$surfaceVariant: #E2E1F3;
+$onSurfaceVariant: #454654;
+$inverseSurface: #2F303A;
+$inverseOnSurface: #F1EFFE;
+$outline: #737383;
+$outlineVariant: #C5C5D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C1C6D6;
-$primary: #C1C6D6;
-$onPrimary: #2B303C;
-$primaryContainer: #414753;
-$onPrimaryContainer: #DEE2F2;
-$inversePrimary: #595E6C;
-$secondary: #C4C6D0;
-$onSecondary: #2D3038;
-$secondaryContainer: #44474F;
-$onSecondaryContainer: #E1E2EC;
-$tertiary: #BEC6DC;
-$onTertiary: #283041;
-$tertiaryContainer: #8991A5;
-$onTertiaryContainer: #000000;
-$error: #FFB4AB;
-$onError: #690005;
-$errorContainer: #93000A;
-$onErrorContainer: #FFDAD6;
-$primaryFixed: #DEE2F2;
-$primaryFixedDim: #C1C6D6;
-$onPrimaryFixed: #161C27;
-$onPrimaryFixedVariant: #414753;
-$secondaryFixed: #E1E2EC;
-$secondaryFixedDim: #C4C6D0;
-$onSecondaryFixed: #191C22;
-$onSecondaryFixedVariant: #44474F;
-$tertiaryFixed: #DAE2F9;
-$tertiaryFixedDim: #BEC6DC;
-$onTertiaryFixed: #131C2C;
-$onTertiaryFixedVariant: #3F4759;
-$success: #B5CCBA;
-$onSuccess: #213528;
-$successContainer: #374B3E;
-$onSuccessContainer: #D1E9D6;
-$term0: #1A1A1D;
-$term1: #8B81FF;
-$term2: #64DCF0;
-$term3: #FFDCF3;
-$term4: #8CADD4;
-$term5: #9FA4EF;
-$term6: #96CFFC;
-$term7: #E8D3DE;
-$term8: #C3B5C0;
-$term9: #BFB9FF;
-$term10: #F7FDFF;
-$term11: #FFFFFF;
-$term12: #C9DEF6;
-$term13: #D7D6FF;
-$term14: #F8FAFF;
-$term15: #E0E3E8;
+$surfaceTint: #2540FF;
+$primary: #2540FF;
+$onPrimary: #FFFFFF;
+$primaryContainer: #DFE0FF;
+$onPrimaryContainer: #000B63;
+$inversePrimary: #BCC2FF;
+$secondary: #615A7C;
+$onSecondary: #FFFFFF;
+$secondaryContainer: #DED4FE;
+$onSecondaryContainer: #1D1736;
+$tertiary: #846A9C;
+$onTertiary: #FFFFFF;
+$tertiaryContainer: #846A9C;
+$onTertiaryContainer: #FFFFFF;
+$error: #BA1A1A;
+$onError: #FFFFFF;
+$errorContainer: #FFDAD6;
+$onErrorContainer: #410002;
+$primaryFixed: #DFE0FF;
+$primaryFixedDim: #BCC2FF;
+$onPrimaryFixed: #000B63;
+$onPrimaryFixedVariant: #0024D9;
+$secondaryFixed: #E7DEFF;
+$secondaryFixedDim: #CBC1E9;
+$onSecondaryFixed: #1D1736;
+$onSecondaryFixedVariant: #494264;
+$tertiaryFixed: #F0DBFF;
+$tertiaryFixedDim: #D9BBF2;
+$onTertiaryFixed: #27103C;
+$onTertiaryFixedVariant: #543D6B;
+$success: #4F6354;
+$onSuccess: #FFFFFF;
+$successContainer: #D1E8D5;
+$onSuccessContainer: #0C1F13;
+$term0: #E6E4F4;
+$term1: #6A4AC2;
+$term2: #3988AE;
+$term3: #8060AF;
+$term4: #A67D8F;
+$term5: #6A5CBB;
+$term6: #6A80AE;
+$term7: #222126;
+$term8: #0D0D0D;
+$term9: #6A4AC2;
+$term10: #3988AE;
+$term11: #8060AF;
+$term12: #A67D8F;
+$term13: #6A5CBB;
+$term14: #6A80AE;
+$term15: #121841;
