add Hyprspace, Hyprland source flake

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #002CFF;
-$secondary_paletteKeyColor: #7A7296;
-$tertiary_paletteKeyColor: #896FA1;
-$neutral_paletteKeyColor: #767682;
-$neutral_variant_paletteKeyColor: #757685;
-$background: #FBF8FF;
-$onBackground: #1A1B25;
-$surface: #FBF8FF;
-$surfaceDim: #DAD8E7;
-$surfaceBright: #FBF8FF;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F4F2FF;
-$surfaceContainer: #EEECFB;
-$surfaceContainerHigh: #E8E7F5;
-$surfaceContainerHighest: #E2E1EF;
-$onSurface: #1A1B25;
-$surfaceVariant: #E2E1F3;
-$onSurfaceVariant: #454654;
-$inverseSurface: #2F303A;
-$inverseOnSurface: #F1EFFE;
-$outline: #737383;
-$outlineVariant: #C5C5D6;
+$primary_paletteKeyColor: #747685;
+$secondary_paletteKeyColor: #76767F;
+$tertiary_paletteKeyColor: #72768B;
+$neutral_paletteKeyColor: #787678;
+$neutral_variant_paletteKeyColor: #787678;
+$background: #131315;
+$onBackground: #E5E2E3;
+$surface: #131315;
+$surfaceDim: #131315;
+$surfaceBright: #39393A;
+$surfaceContainerLowest: #0E0E0F;
+$surfaceContainerLow: #1C1B1D;
+$surfaceContainer: #201F21;
+$surfaceContainerHigh: #2A2A2B;
+$surfaceContainerHighest: #353436;
+$onSurface: #E5E2E3;
+$surfaceVariant: #474648;
+$onSurfaceVariant: #C8C6C7;
+$inverseSurface: #E5E2E3;
+$inverseOnSurface: #313032;
+$outline: #929092;
+$outlineVariant: #474648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #2540FF;
-$primary: #2540FF;
-$onPrimary: #FFFFFF;
-$primaryContainer: #DFE0FF;
-$onPrimaryContainer: #000B63;
-$inversePrimary: #BCC2FF;
-$secondary: #615A7C;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #DED4FE;
-$onSecondaryContainer: #1D1736;
-$tertiary: #846A9C;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #846A9C;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #DFE0FF;
-$primaryFixedDim: #BCC2FF;
-$onPrimaryFixed: #000B63;
-$onPrimaryFixedVariant: #0024D9;
-$secondaryFixed: #E7DEFF;
-$secondaryFixedDim: #CBC1E9;
-$onSecondaryFixed: #1D1736;
-$onSecondaryFixedVariant: #494264;
-$tertiaryFixed: #F0DBFF;
-$tertiaryFixedDim: #D9BBF2;
-$onTertiaryFixed: #27103C;
-$onTertiaryFixedVariant: #543D6B;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #E6E4F4;
-$term1: #6A4AC2;
-$term2: #3988AE;
-$term3: #8060AF;
-$term4: #A67D8F;
-$term5: #6A5CBB;
-$term6: #6A80AE;
-$term7: #222126;
-$term8: #0D0D0D;
-$term9: #6A4AC2;
-$term10: #3988AE;
-$term11: #8060AF;
-$term12: #A67D8F;
-$term13: #6A5CBB;
-$term14: #6A80AE;
-$term15: #121841;
+$surfaceTint: #C4C5D6;
+$primary: #C4C5D6;
+$onPrimary: #2D303D;
+$primaryContainer: #444654;
+$onPrimaryContainer: #E0E1F3;
+$inversePrimary: #5B5E6C;
+$secondary: #C6C5D0;
+$onSecondary: #2F3038;
+$secondaryContainer: #45464F;
+$onSecondaryContainer: #E2E1EC;
+$tertiary: #C2C5DD;
+$onTertiary: #2B3042;
+$tertiaryContainer: #8C90A6;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #E0E1F3;
+$primaryFixedDim: #C4C5D6;
+$onPrimaryFixed: #181B27;
+$onPrimaryFixedVariant: #444654;
+$secondaryFixed: #E2E1EC;
+$secondaryFixedDim: #C6C5D0;
+$onSecondaryFixed: #1A1B23;
+$onSecondaryFixedVariant: #45464F;
+$tertiaryFixed: #DEE1F9;
+$tertiaryFixedDim: #C2C5DD;
+$onTertiaryFixed: #161B2C;
+$onTertiaryFixedVariant: #424659;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #1B1A1C;
+$term1: #9B7BFF;
+$term2: #64DCF0;
+$term3: #FFDCF3;
+$term4: #92ABD6;
+$term5: #AAA1ED;
+$term6: #9DCEFF;
+$term7: #E8D3DE;
+$term8: #C3B5C0;
+$term9: #C8B5FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #CCDDF7;
+$term13: #DDD5FF;
+$term14: #F8FAFF;
+$term15: #E3E2E7;
