configure Hyprspace, hyprexpo broken, version mismatch

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: True;
+$darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #747685;
-$secondary_paletteKeyColor: #76767F;
-$tertiary_paletteKeyColor: #72768B;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #131315;
-$onBackground: #E5E2E3;
-$surface: #131315;
-$surfaceDim: #131315;
-$surfaceBright: #39393A;
-$surfaceContainerLowest: #0E0E0F;
-$surfaceContainerLow: #1C1B1D;
-$surfaceContainer: #201F21;
-$surfaceContainerHigh: #2A2A2B;
-$surfaceContainerHighest: #353436;
-$onSurface: #E5E2E3;
-$surfaceVariant: #474648;
-$onSurfaceVariant: #C8C6C7;
-$inverseSurface: #E5E2E3;
-$inverseOnSurface: #313032;
-$outline: #929092;
-$outlineVariant: #474648;
+$primary_paletteKeyColor: #0684FF;
+$secondary_paletteKeyColor: #707598;
+$tertiary_paletteKeyColor: #7871A4;
+$neutral_paletteKeyColor: #737782;
+$neutral_variant_paletteKeyColor: #717785;
+$background: #F9F9FF;
+$onBackground: #171C25;
+$surface: #F9F9FF;
+$surfaceDim: #D6DAE6;
+$surfaceBright: #F9F9FF;
+$surfaceContainerLowest: #FFFFFF;
+$surfaceContainerLow: #F0F3FF;
+$surfaceContainer: #EAEDFA;
+$surfaceContainerHigh: #E4E8F5;
+$surfaceContainerHighest: #DFE2EF;
+$onSurface: #171C25;
+$surfaceVariant: #DDE2F2;
+$onSurfaceVariant: #414753;
+$inverseSurface: #2C303A;
+$inverseOnSurface: #EDF0FD;
+$outline: #6F7582;
+$outlineVariant: #C1C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C4C5D6;
-$primary: #C4C5D6;
-$onPrimary: #2D303D;
-$primaryContainer: #444654;
-$onPrimaryContainer: #E0E1F3;
-$inversePrimary: #5B5E6C;
-$secondary: #C6C5D0;
-$onSecondary: #2F3038;
-$secondaryContainer: #45464F;
-$onSecondaryContainer: #E2E1EC;
-$tertiary: #C2C5DD;
-$onTertiary: #2B3042;
-$tertiaryContainer: #8C90A6;
-$onTertiaryContainer: #000000;
-$error: #FFB4AB;
-$onError: #690005;
-$errorContainer: #93000A;
-$onErrorContainer: #FFDAD6;
-$primaryFixed: #E0E1F3;
-$primaryFixedDim: #C4C5D6;
-$onPrimaryFixed: #181B27;
-$onPrimaryFixedVariant: #444654;
-$secondaryFixed: #E2E1EC;
-$secondaryFixedDim: #C6C5D0;
-$onSecondaryFixed: #1A1B23;
-$onSecondaryFixedVariant: #45464F;
-$tertiaryFixed: #DEE1F9;
-$tertiaryFixedDim: #C2C5DD;
-$onTertiaryFixed: #161B2C;
-$onTertiaryFixedVariant: #424659;
-$success: #B5CCBA;
-$onSuccess: #213528;
-$successContainer: #374B3E;
-$onSuccessContainer: #D1E9D6;
-$term0: #1B1A1C;
-$term1: #9B7BFF;
-$term2: #64DCF0;
-$term3: #FFDCF3;
-$term4: #92ABD6;
-$term5: #AAA1ED;
-$term6: #9DCEFF;
-$term7: #E8D3DE;
-$term8: #C3B5C0;
-$term9: #C8B5FF;
-$term10: #F7FDFF;
-$term11: #FFFFFF;
-$term12: #CCDDF7;
-$term13: #DDD5FF;
-$term14: #F8FAFF;
-$term15: #E3E2E7;
+$surfaceTint: #005DB7;
+$primary: #005DB7;
+$onPrimary: #FFFFFF;
+$primaryContainer: #D6E3FF;
+$onPrimaryContainer: #001B3D;
+$inversePrimary: #A9C7FF;
+$secondary: #575C7E;
+$onSecondary: #FFFFFF;
+$secondaryContainer: #D3D8FF;
+$onSecondaryContainer: #131937;
+$tertiary: #766EA1;
+$onTertiary: #FFFFFF;
+$tertiaryContainer: #766EA1;
+$onTertiaryContainer: #FFFFFF;
+$error: #BA1A1A;
+$onError: #FFFFFF;
+$errorContainer: #FFDAD6;
+$onErrorContainer: #410002;
+$primaryFixed: #D6E3FF;
+$primaryFixedDim: #A9C7FF;
+$onPrimaryFixed: #001B3D;
+$onPrimaryFixedVariant: #00468C;
+$secondaryFixed: #DEE1FF;
+$secondaryFixedDim: #BFC4EB;
+$onSecondaryFixed: #131937;
+$onSecondaryFixedVariant: #3F4565;
+$tertiaryFixed: #E5DEFF;
+$tertiaryFixedDim: #C9C0F8;
+$onTertiaryFixed: #1B1442;
+$onTertiaryFixedVariant: #474070;
+$success: #4F6354;
+$onSuccess: #FFFFFF;
+$successContainer: #D1E8D5;
+$onSuccessContainer: #0C1F13;
+$term0: #E1E5F4;
+$term1: #4F53C2;
+$term2: #3988AE;
+$term3: #7E60B0;
+$term4: #009993;
+$term5: #5363BB;
+$term6: #5B83AE;
+$term7: #212226;
+$term8: #0D0D0D;
+$term9: #4F53C2;
+$term10: #3988AE;
+$term11: #7E60B0;
+$term12: #009993;
+$term13: #5363BB;
+$term14: #5B83AE;
+$term15: #001C3D;
