configure hyprexpo, cleanup pkgs

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #0684FF;
-$secondary_paletteKeyColor: #707598;
-$tertiary_paletteKeyColor: #7871A4;
-$neutral_paletteKeyColor: #737782;
-$neutral_variant_paletteKeyColor: #717785;
-$background: #F9F9FF;
-$onBackground: #171C25;
-$surface: #F9F9FF;
-$surfaceDim: #D6DAE6;
-$surfaceBright: #F9F9FF;
+$primary_paletteKeyColor: #0066FE;
+$secondary_paletteKeyColor: #757498;
+$tertiary_paletteKeyColor: #7F6FA2;
+$neutral_paletteKeyColor: #747682;
+$neutral_variant_paletteKeyColor: #737685;
+$background: #FAF8FF;
+$onBackground: #181B25;
+$surface: #FAF8FF;
+$surfaceDim: #D8D9E7;
+$surfaceBright: #FAF8FF;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F0F3FF;
-$surfaceContainer: #EAEDFA;
-$surfaceContainerHigh: #E4E8F5;
-$surfaceContainerHighest: #DFE2EF;
-$onSurface: #171C25;
-$surfaceVariant: #DDE2F2;
-$onSurfaceVariant: #414753;
-$inverseSurface: #2C303A;
-$inverseOnSurface: #EDF0FD;
-$outline: #6F7582;
-$outlineVariant: #C1C6D6;
+$surfaceContainerLow: #F2F3FF;
+$surfaceContainer: #ECEDFB;
+$surfaceContainerHigh: #E6E7F5;
+$surfaceContainerHighest: #E0E2EF;
+$onSurface: #181B25;
+$surfaceVariant: #DFE2F2;
+$onSurfaceVariant: #434654;
+$inverseSurface: #2D303A;
+$inverseOnSurface: #EFF0FE;
+$outline: #717483;
+$outlineVariant: #C3C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #005DB7;
-$primary: #005DB7;
+$surfaceTint: #0055D5;
+$primary: #0055D5;
 $onPrimary: #FFFFFF;
-$primaryContainer: #D6E3FF;
-$onPrimaryContainer: #001B3D;
-$inversePrimary: #A9C7FF;
-$secondary: #575C7E;
+$primaryContainer: #DAE1FF;
+$onPrimaryContainer: #001849;
+$inversePrimary: #B3C5FF;
+$secondary: #5C5B7E;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #D3D8FF;
-$onSecondaryContainer: #131937;
-$tertiary: #766EA1;
+$secondaryContainer: #D8D6FF;
+$onSecondaryContainer: #181837;
+$tertiary: #7C6C9F;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #766EA1;
+$tertiaryContainer: #7C6C9F;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #D6E3FF;
-$primaryFixedDim: #A9C7FF;
-$onPrimaryFixed: #001B3D;
-$onPrimaryFixedVariant: #00468C;
-$secondaryFixed: #DEE1FF;
-$secondaryFixedDim: #BFC4EB;
-$onSecondaryFixed: #131937;
-$onSecondaryFixedVariant: #3F4565;
-$tertiaryFixed: #E5DEFF;
-$tertiaryFixedDim: #C9C0F8;
-$onTertiaryFixed: #1B1442;
-$onTertiaryFixedVariant: #474070;
+$primaryFixed: #DAE1FF;
+$primaryFixedDim: #B3C5FF;
+$onPrimaryFixed: #001849;
+$onPrimaryFixedVariant: #003FA4;
+$secondaryFixed: #E2DFFF;
+$secondaryFixedDim: #C5C3EA;
+$onSecondaryFixed: #181837;
+$onSecondaryFixedVariant: #444465;
+$tertiaryFixed: #EADDFF;
+$tertiaryFixedDim: #D0BDF6;
+$onTertiaryFixed: #211240;
+$onTertiaryFixedVariant: #4E3F6E;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E1E5F4;
-$term1: #4F53C2;
+$term0: #E3E5F4;
+$term1: #5C4FC2;
 $term2: #3988AE;
 $term3: #7E60B0;
 $term4: #009993;
-$term5: #5363BB;
-$term6: #5B83AE;
-$term7: #212226;
+$term5: #5E60BB;
+$term6: #6382AE;
+$term7: #222226;
 $term8: #0D0D0D;
-$term9: #4F53C2;
+$term9: #5C4FC2;
 $term10: #3988AE;
 $term11: #7E60B0;
 $term12: #009993;
-$term13: #5363BB;
-$term14: #5B83AE;
-$term15: #001C3D;
+$term13: #5E60BB;
+$term14: #6382AE;
+$term15: #061942;
