back to Hyprspace, add fuzzel, gradience wallpaper colorgen for hyprland/hyprlock/fuzzel

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #0066FE;
-$secondary_paletteKeyColor: #757498;
-$tertiary_paletteKeyColor: #7F6FA2;
-$neutral_paletteKeyColor: #747682;
-$neutral_variant_paletteKeyColor: #737685;
-$background: #FAF8FF;
-$onBackground: #181B25;
-$surface: #FAF8FF;
-$surfaceDim: #D8D9E7;
-$surfaceBright: #FAF8FF;
+$primary_paletteKeyColor: #757685;
+$secondary_paletteKeyColor: #767680;
+$tertiary_paletteKeyColor: #73768B;
+$neutral_paletteKeyColor: #787678;
+$neutral_variant_paletteKeyColor: #787678;
+$background: #FCF8FA;
+$onBackground: #1C1B1D;
+$surface: #FCF8FA;
+$surfaceDim: #DCD9DB;
+$surfaceBright: #FCF8FA;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F2F3FF;
-$surfaceContainer: #ECEDFB;
-$surfaceContainerHigh: #E6E7F5;
-$surfaceContainerHighest: #E0E2EF;
-$onSurface: #181B25;
-$surfaceVariant: #DFE2F2;
-$onSurfaceVariant: #434654;
-$inverseSurface: #2D303A;
-$inverseOnSurface: #EFF0FE;
-$outline: #717483;
-$outlineVariant: #C3C6D6;
+$surfaceContainerLow: #F6F3F4;
+$surfaceContainer: #F0EDEF;
+$surfaceContainerHigh: #EBE7E9;
+$surfaceContainerHighest: #E5E1E3;
+$onSurface: #1C1B1D;
+$surfaceVariant: #E5E1E3;
+$onSurfaceVariant: #474648;
+$inverseSurface: #313032;
+$inverseOnSurface: #F3F0F1;
+$outline: #767476;
+$outlineVariant: #C8C6C7;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #0055D5;
-$primary: #0055D5;
+$surfaceTint: #5C5D6C;
+$primary: #5C5D6C;
 $onPrimary: #FFFFFF;
-$primaryContainer: #DAE1FF;
-$onPrimaryContainer: #001849;
-$inversePrimary: #B3C5FF;
-$secondary: #5C5B7E;
+$primaryContainer: #E1E1F3;
+$onPrimaryContainer: #191B27;
+$inversePrimary: #C5C5D6;
+$secondary: #5D5E67;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #D8D6FF;
-$onSecondaryContainer: #181837;
-$tertiary: #7C6C9F;
+$secondaryContainer: #E2E1EC;
+$onSecondaryContainer: #1A1B23;
+$tertiary: #707389;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #7C6C9F;
+$tertiaryContainer: #707389;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #DAE1FF;
-$primaryFixedDim: #B3C5FF;
-$onPrimaryFixed: #001849;
-$onPrimaryFixedVariant: #003FA4;
-$secondaryFixed: #E2DFFF;
-$secondaryFixedDim: #C5C3EA;
-$onSecondaryFixed: #181837;
-$onSecondaryFixedVariant: #444465;
-$tertiaryFixed: #EADDFF;
-$tertiaryFixedDim: #D0BDF6;
-$onTertiaryFixed: #211240;
-$onTertiaryFixedVariant: #4E3F6E;
+$primaryFixed: #E1E1F3;
+$primaryFixedDim: #C5C5D6;
+$onPrimaryFixed: #191B27;
+$onPrimaryFixedVariant: #444654;
+$secondaryFixed: #E2E1EC;
+$secondaryFixedDim: #C6C5D0;
+$onSecondaryFixed: #1A1B23;
+$onSecondaryFixedVariant: #45464F;
+$tertiaryFixed: #DFE1F9;
+$tertiaryFixedDim: #C3C5DD;
+$onTertiaryFixed: #171B2C;
+$onTertiaryFixedVariant: #424659;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E3E5F4;
-$term1: #5C4FC2;
+$term0: #E8E5E7;
+$term1: #674BC2;
 $term2: #3988AE;
 $term3: #7E60B0;
-$term4: #009993;
-$term5: #5E60BB;
-$term6: #6382AE;
-$term7: #222226;
+$term4: #A67D8F;
+$term5: #685DBB;
+$term6: #6980AE;
+$term7: #222126;
 $term8: #0D0D0D;
-$term9: #5C4FC2;
+$term9: #674BC2;
 $term10: #3988AE;
 $term11: #7E60B0;
-$term12: #009993;
-$term13: #5E60BB;
-$term14: #6382AE;
-$term15: #061942;
+$term12: #A67D8F;
+$term13: #685DBB;
+$term14: #6980AE;
+$term15: #1C1A22;
