--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #757685;
-$secondary_paletteKeyColor: #767680;
-$tertiary_paletteKeyColor: #73768B;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #FCF8FA;
-$onBackground: #1C1B1D;
-$surface: #FCF8FA;
-$surfaceDim: #DCD9DB;
-$surfaceBright: #FCF8FA;
+$primary_paletteKeyColor: #0A7DFF;
+$secondary_paletteKeyColor: #717598;
+$tertiary_paletteKeyColor: #7A70A4;
+$neutral_paletteKeyColor: #737782;
+$neutral_variant_paletteKeyColor: #727785;
+$background: #F9F9FF;
+$onBackground: #171C25;
+$surface: #F9F9FF;
+$surfaceDim: #D7DAE6;
+$surfaceBright: #F9F9FF;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F6F3F4;
-$surfaceContainer: #F0EDEF;
-$surfaceContainerHigh: #EBE7E9;
-$surfaceContainerHighest: #E5E1E3;
-$onSurface: #1C1B1D;
-$surfaceVariant: #E5E1E3;
-$onSurfaceVariant: #474648;
-$inverseSurface: #313032;
-$inverseOnSurface: #F3F0F1;
-$outline: #767476;
-$outlineVariant: #C8C6C7;
+$surfaceContainerLow: #F1F3FF;
+$surfaceContainer: #EBEDFA;
+$surfaceContainerHigh: #E5E8F5;
+$surfaceContainerHighest: #DFE2EF;
+$onSurface: #171C25;
+$surfaceVariant: #DEE2F2;
+$onSurfaceVariant: #414753;
+$inverseSurface: #2C303A;
+$inverseOnSurface: #EDF0FD;
+$outline: #6F7482;
+$outlineVariant: #C1C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #5C5D6C;
-$primary: #5C5D6C;
+$surfaceTint: #005BBF;
+$primary: #005BBF;
 $onPrimary: #FFFFFF;
-$primaryContainer: #E1E1F3;
-$onPrimaryContainer: #191B27;
-$inversePrimary: #C5C5D6;
-$secondary: #5D5E67;
+$primaryContainer: #D7E2FF;
+$onPrimaryContainer: #001A40;
+$inversePrimary: #ACC7FF;
+$secondary: #585C7E;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #E2E1EC;
-$onSecondaryContainer: #1A1B23;
-$tertiary: #707389;
+$secondaryContainer: #D4D7FF;
+$onSecondaryContainer: #151937;
+$tertiary: #786EA1;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #707389;
+$tertiaryContainer: #786EA1;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #E1E1F3;
-$primaryFixedDim: #C5C5D6;
-$onPrimaryFixed: #191B27;
-$onPrimaryFixedVariant: #444654;
-$secondaryFixed: #E2E1EC;
-$secondaryFixedDim: #C6C5D0;
-$onSecondaryFixed: #1A1B23;
-$onSecondaryFixedVariant: #45464F;
-$tertiaryFixed: #DFE1F9;
-$tertiaryFixedDim: #C3C5DD;
-$onTertiaryFixed: #171B2C;
-$onTertiaryFixedVariant: #424659;
+$primaryFixed: #D7E2FF;
+$primaryFixedDim: #ACC7FF;
+$onPrimaryFixed: #001A40;
+$onPrimaryFixedVariant: #004492;
+$secondaryFixed: #DFE0FF;
+$secondaryFixedDim: #C1C4EB;
+$onSecondaryFixed: #151937;
+$onSecondaryFixedVariant: #414465;
+$tertiaryFixed: #E7DEFF;
+$tertiaryFixedDim: #CBBFF8;
+$onTertiaryFixed: #1D1342;
+$onTertiaryFixedVariant: #494070;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E8E5E7;
-$term1: #674BC2;
+$term0: #E2E5F4;
+$term1: #5352C2;
 $term2: #3988AE;
 $term3: #7E60B0;
-$term4: #A67D8F;
-$term5: #685DBB;
-$term6: #6980AE;
-$term7: #222126;
+$term4: #009993;
+$term5: #5762BB;
+$term6: #5E83AE;
+$term7: #222226;
 $term8: #0D0D0D;
-$term9: #674BC2;
+$term9: #5352C2;
 $term10: #3988AE;
 $term11: #7E60B0;
-$term12: #A67D8F;
-$term13: #685DBB;
-$term14: #6980AE;
-$term15: #1C1A22;
+$term12: #009993;
+$term13: #5762BB;
+$term14: #5E83AE;
+$term15: #001C3D;
