make hyprland and fuzzel colorscheme more vibrant, fit to ags scheme

--- a/home/Liqyid/common/optional/ags/style/material.scss
+++ b/home/Liqyid/common/optional/ags/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #0A7DFF;
-$secondary_paletteKeyColor: #717598;
-$tertiary_paletteKeyColor: #7A70A4;
-$neutral_paletteKeyColor: #737782;
-$neutral_variant_paletteKeyColor: #727785;
-$background: #F9F9FF;
-$onBackground: #171C25;
-$surface: #F9F9FF;
-$surfaceDim: #D7DAE6;
-$surfaceBright: #F9F9FF;
+$primary_paletteKeyColor: #FF0086;
+$secondary_paletteKeyColor: #9D6A69;
+$tertiary_paletteKeyColor: #A86651;
+$neutral_paletteKeyColor: #867276;
+$neutral_variant_paletteKeyColor: #897177;
+$background: #FFF8F8;
+$onBackground: #26181C;
+$surface: #FFF8F8;
+$surfaceDim: #EDD4D9;
+$surfaceBright: #FFF8F8;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F1F3FF;
-$surfaceContainer: #EBEDFA;
-$surfaceContainerHigh: #E5E8F5;
-$surfaceContainerHighest: #DFE2EF;
-$onSurface: #171C25;
-$surfaceVariant: #DEE2F2;
-$onSurfaceVariant: #414753;
-$inverseSurface: #2C303A;
-$inverseOnSurface: #EDF0FD;
-$outline: #6F7482;
-$outlineVariant: #C1C6D6;
+$surfaceContainerLow: #FFF0F2;
+$surfaceContainer: #FFE8ED;
+$surfaceContainerHigh: #FCE2E7;
+$surfaceContainerHighest: #F6DCE1;
+$onSurface: #26181C;
+$surfaceVariant: #F9DBE1;
+$onSurfaceVariant: #564147;
+$inverseSurface: #3C2C30;
+$inverseOnSurface: #FFECEF;
+$outline: #866E74;
+$outlineVariant: #DCBFC6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #005BBF;
-$primary: #005BBF;
+$surfaceTint: #BA0060;
+$primary: #BA0060;
 $onPrimary: #FFFFFF;
-$primaryContainer: #D7E2FF;
-$onPrimaryContainer: #001A40;
-$inversePrimary: #ACC7FF;
-$secondary: #585C7E;
+$primaryContainer: #FFD9E2;
+$onPrimaryContainer: #3F001C;
+$inversePrimary: #FFB1C7;
+$secondary: #815251;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #D4D7FF;
-$onSecondaryContainer: #151937;
-$tertiary: #786EA1;
+$secondaryContainer: #FEBFBE;
+$onSecondaryContainer: #331111;
+$tertiary: #A5644F;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #786EA1;
+$tertiaryContainer: #A5644F;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #D7E2FF;
-$primaryFixedDim: #ACC7FF;
-$onPrimaryFixed: #001A40;
-$onPrimaryFixedVariant: #004492;
-$secondaryFixed: #DFE0FF;
-$secondaryFixedDim: #C1C4EB;
-$onSecondaryFixed: #151937;
-$onSecondaryFixedVariant: #414465;
-$tertiaryFixed: #E7DEFF;
-$tertiaryFixedDim: #CBBFF8;
-$onTertiaryFixed: #1D1342;
-$onTertiaryFixedVariant: #494070;
+$primaryFixed: #FFD9E2;
+$primaryFixedDim: #FFB1C7;
+$onPrimaryFixed: #3F001C;
+$onPrimaryFixedVariant: #8E0048;
+$secondaryFixed: #FFDAD8;
+$secondaryFixedDim: #F5B7B6;
+$onSecondaryFixed: #331111;
+$onSecondaryFixedVariant: #663B3A;
+$tertiaryFixed: #FFDBD0;
+$tertiaryFixedDim: #FFB59E;
+$onTertiaryFixed: #370D02;
+$onTertiaryFixedVariant: #6E3725;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E2E5F4;
-$term1: #5352C2;
-$term2: #3988AE;
-$term3: #7E60B0;
-$term4: #009993;
-$term5: #5762BB;
-$term6: #5E83AE;
-$term7: #222226;
-$term8: #0D0D0D;
-$term9: #5352C2;
-$term10: #3988AE;
-$term11: #7E60B0;
-$term12: #009993;
-$term13: #5762BB;
-$term14: #5E83AE;
-$term15: #001C3D;
+$term0: #F3E2E4;
+$term1: #B3265F;
+$term2: #A97363;
+$term3: #AD5363;
+$term4: #A67F7E;
+$term5: #B24073;
+$term6: #8D76AD;
+$term7: #272023;
+$term8: #0E0D0D;
+$term9: #B3265F;
+$term10: #A97363;
+$term11: #AD5363;
+$term12: #A67F7E;
+$term13: #B24073;
+$term14: #8D76AD;
+$term15: #360C1D;
