--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #777585;
-$secondary_paletteKeyColor: #787680;
-$tertiary_paletteKeyColor: #77758B;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #FCF8FA;
-$onBackground: #1C1B1D;
-$surface: #FCF8FA;
-$surfaceDim: #DDD9DB;
-$surfaceBright: #FCF8FA;
+$primary_paletteKeyColor: #0076FE;
+$secondary_paletteKeyColor: #727497;
+$tertiary_paletteKeyColor: #7C70A4;
+$neutral_paletteKeyColor: #747782;
+$neutral_variant_paletteKeyColor: #727785;
+$background: #FAF9FF;
+$onBackground: #181B25;
+$surface: #FAF9FF;
+$surfaceDim: #D7D9E6;
+$surfaceBright: #FAF9FF;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F7F2F4;
-$surfaceContainer: #F1EDEF;
-$surfaceContainerHigh: #EBE7E9;
-$surfaceContainerHighest: #E5E1E3;
-$onSurface: #1C1B1D;
-$surfaceVariant: #E5E1E3;
-$onSurfaceVariant: #484648;
-$inverseSurface: #313032;
-$inverseOnSurface: #F4F0F1;
-$outline: #767476;
-$outlineVariant: #C9C5C7;
+$surfaceContainerLow: #F1F3FF;
+$surfaceContainer: #EBEDFB;
+$surfaceContainerHigh: #E5E8F5;
+$surfaceContainerHighest: #DFE2EF;
+$onSurface: #181B25;
+$surfaceVariant: #DEE2F2;
+$onSurfaceVariant: #424754;
+$inverseSurface: #2D303A;
+$inverseOnSurface: #EEF0FD;
+$outline: #707482;
+$outlineVariant: #C2C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #5E5D6C;
-$primary: #5E5D6C;
+$surfaceTint: #005AC4;
+$primary: #005AC4;
 $onPrimary: #FFFFFF;
-$primaryContainer: #E4E0F2;
-$onPrimaryContainer: #1B1A27;
-$inversePrimary: #C8C4D6;
-$secondary: #5F5D67;
+$primaryContainer: #D8E2FF;
+$onPrimaryContainer: #001A42;
+$inversePrimary: #AEC6FF;
+$secondary: #595C7E;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #E2DEE9;
-$onSecondaryContainer: #1B1B23;
-$tertiary: #747288;
+$secondaryContainer: #D5D7FF;
+$onSecondaryContainer: #161937;
+$tertiary: #796DA1;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #747288;
+$tertiaryContainer: #796DA1;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #E4E0F2;
-$primaryFixedDim: #C8C4D6;
-$onPrimaryFixed: #1B1A27;
-$onPrimaryFixedVariant: #474554;
-$secondaryFixed: #E5E1EC;
-$secondaryFixedDim: #C8C5D0;
-$onSecondaryFixed: #1B1B23;
-$onSecondaryFixedVariant: #47464F;
-$tertiaryFixed: #E4E0F9;
-$tertiaryFixedDim: #C7C4DC;
-$onTertiaryFixed: #1B1A2C;
-$onTertiaryFixedVariant: #464559;
+$primaryFixed: #D8E2FF;
+$primaryFixedDim: #AEC6FF;
+$onPrimaryFixed: #001A42;
+$onPrimaryFixedVariant: #004396;
+$secondaryFixed: #E0E0FF;
+$secondaryFixedDim: #C2C4EB;
+$onSecondaryFixed: #161937;
+$onSecondaryFixedVariant: #414465;
+$tertiaryFixed: #E7DEFF;
+$tertiaryFixedDim: #CCBFF7;
+$onTertiaryFixed: #1E1341;
+$onTertiaryFixedVariant: #4A3F6F;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E9E4E7;
-$term1: #7445C1;
+$term0: #E2E5F4;
+$term1: #5551C2;
 $term2: #3988AE;
-$term3: #865EAB;
-$term4: #A67D8F;
-$term5: #7359BB;
-$term6: #707FAD;
-$term7: #232125;
+$term3: #7E60B0;
+$term4: #009993;
+$term5: #5961BB;
+$term6: #5F83AE;
+$term7: #222226;
 $term8: #0D0D0D;
-$term9: #7445C1;
+$term9: #5551C2;
 $term10: #3988AE;
-$term11: #865EAB;
-$term12: #A67D8F;
-$term13: #7359BB;
-$term14: #707FAD;
-$term15: #1C1A22;
+$term11: #7E60B0;
+$term12: #009993;
+$term13: #5961BB;
+$term14: #5F83AE;
+$term15: #061942;
