--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #0076FE;
-$secondary_paletteKeyColor: #727497;
-$tertiary_paletteKeyColor: #7C70A4;
-$neutral_paletteKeyColor: #747782;
-$neutral_variant_paletteKeyColor: #727785;
-$background: #FAF9FF;
-$onBackground: #181B25;
-$surface: #FAF9FF;
-$surfaceDim: #D7D9E6;
-$surfaceBright: #FAF9FF;
+$primary_paletteKeyColor: #00ACFE;
+$secondary_paletteKeyColor: #677796;
+$tertiary_paletteKeyColor: #6D74A6;
+$neutral_paletteKeyColor: #707881;
+$neutral_variant_paletteKeyColor: #6E7883;
+$background: #F7F9FF;
+$onBackground: #151C23;
+$surface: #F7F9FF;
+$surfaceDim: #D3DBE5;
+$surfaceBright: #F7F9FF;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F1F3FF;
-$surfaceContainer: #EBEDFB;
-$surfaceContainerHigh: #E5E8F5;
-$surfaceContainerHighest: #DFE2EF;
-$onSurface: #181B25;
-$surfaceVariant: #DEE2F2;
-$onSurfaceVariant: #424754;
-$inverseSurface: #2D303A;
-$inverseOnSurface: #EEF0FD;
-$outline: #707482;
-$outlineVariant: #C2C6D6;
+$surfaceContainerLow: #EDF4FF;
+$surfaceContainer: #E7EFF9;
+$surfaceContainerHigh: #E1E9F3;
+$surfaceContainerHighest: #DBE3ED;
+$onSurface: #151C23;
+$surfaceVariant: #D9E4F0;
+$onSurfaceVariant: #3E4852;
+$inverseSurface: #293139;
+$inverseOnSurface: #EAF1FC;
+$outline: #6B7681;
+$outlineVariant: #BDC8D4;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #005AC4;
-$primary: #005AC4;
+$surfaceTint: #006496;
+$primary: #006496;
 $onPrimary: #FFFFFF;
-$primaryContainer: #D8E2FF;
-$onPrimaryContainer: #001A42;
-$inversePrimary: #AEC6FF;
-$secondary: #595C7E;
+$primaryContainer: #CCE5FF;
+$onPrimaryContainer: #001E31;
+$inversePrimary: #91CDFF;
+$secondary: #4F5F7D;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #D5D7FF;
-$onSecondaryContainer: #161937;
-$tertiary: #796DA1;
+$secondaryContainer: #CADAFE;
+$onSecondaryContainer: #091B36;
+$tertiary: #6B71A3;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #796DA1;
+$tertiaryContainer: #6B71A3;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #D8E2FF;
-$primaryFixedDim: #AEC6FF;
-$onPrimaryFixed: #001A42;
-$onPrimaryFixedVariant: #004396;
-$secondaryFixed: #E0E0FF;
-$secondaryFixedDim: #C2C4EB;
-$onSecondaryFixed: #161937;
-$onSecondaryFixedVariant: #414465;
-$tertiaryFixed: #E7DEFF;
-$tertiaryFixedDim: #CCBFF7;
-$onTertiaryFixed: #1E1341;
-$onTertiaryFixedVariant: #4A3F6F;
+$primaryFixed: #CCE5FF;
+$primaryFixedDim: #91CDFF;
+$onPrimaryFixed: #001E31;
+$onPrimaryFixedVariant: #004B72;
+$secondaryFixed: #D6E3FF;
+$secondaryFixedDim: #B6C7EA;
+$onSecondaryFixed: #091B36;
+$onSecondaryFixedVariant: #374764;
+$tertiaryFixed: #DFE0FF;
+$tertiaryFixedDim: #BDC3FA;
+$onTertiaryFixed: #101744;
+$onTertiaryFixedVariant: #3D4372;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E2E5F4;
-$term1: #5551C2;
-$term2: #3988AE;
+$term0: #DDE7F4;
+$term1: #255BC2;
+$term2: #008CAA;
 $term3: #7E60B0;
 $term4: #009993;
-$term5: #5961BB;
-$term6: #5F83AE;
-$term7: #222226;
+$term5: #3369BB;
+$term6: #4287AE;
+$term7: #212225;
 $term8: #0D0D0D;
-$term9: #5551C2;
-$term10: #3988AE;
+$term9: #255BC2;
+$term10: #008CAA;
 $term11: #7E60B0;
 $term12: #009993;
-$term13: #5961BB;
-$term14: #5F83AE;
-$term15: #061942;
+$term13: #3369BB;
+$term14: #4287AE;
+$term15: #001D32;
